syntax = "proto3";

package runtime;
option go_package="runtimepb";

message Runtime {
    message MongoConf {
        string username = 1;
        string password = 2;
    }

    message MinioConf {
        string accessKey = 1;
        string secretKey = 2;
    }

    string name = 1;
    MinioConf minio = 2;
    MongoConf mongo = 3;
}

message CreateRuntimeRequest {
    Runtime runtime = 1;
}

message CreateRuntimeResponse {
    string result = 1;
}

service RuntimeService{
    rpc CreateRuntime(CreateRuntimeRequest) returns (CreateRuntimeResponse) {};
};
