syntax = "proto3";

package monitoring;
option go_package = "monitoringpb";

message NodeLogsRequest {
  string nodeId = 1;
}

message NodeLogsResponse {
  string date = 1;
  string versionId = 2;
  string nodeId = 3;
  string podId = 4;
  string message = 5;
  string level = 6;
  string nodeName = 7;
}

message NodeStatusRequest {
  string versionName = 2;
}

message NodeStatusResponse {
  string nodeId = 1;
  string status = 2;
  string message = 3;
}

message SearchLogsRequest {
  string search = 1;
  string startDate = 2;
  string endDate = 3;
  string workflowID = 4;
  string nodeID = 5;
  string level = 6;
  string cursor = 7;
}

message SearchLogsResponse {
  string cursor = 1;
  repeated NodeLogsResponse logs = 2;
}

service MonitoringService {
  rpc NodeLogs (NodeLogsRequest) returns (stream NodeLogsResponse);
  rpc NodeStatus (NodeStatusRequest) returns (stream NodeStatusResponse);
  rpc SearchLogs (SearchLogsRequest) returns (SearchLogsResponse);
};
